Fixing a bug where an area search and a near searhc conflicted. Covering a couple of similarly conflicting scenarios in the map search. Replacing the search button witha neat little icon in the map search page

--- a/ckanext/ngds/ngdsui/public/css/map.less
+++ b/ckanext/ngds/ngdsui/public/css/map.less
@@ -309,7 +309,8 @@
 
   form {
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 20px;
+    margin-right: 35px;
 
     fieldset {
       margin-top: 15px;
@@ -319,7 +320,7 @@
       margin-bottom: 0px;
       padding-bottom: 0px;
       height: 30px;
-      width: 225px;
+      width: 100%;
       margin-top: 0px;
       padding-top: 0px;
       background-color: #fefefe;
@@ -364,7 +365,7 @@
     width: 85%;
     margin-top: 5px;
     border: 2px solid #366D96;
-    border-radius:0px;
+    border-radius: 0px;
   }
 }
 
@@ -387,7 +388,7 @@
 
 .leaflet-control-zoom {
   width: 25px;
-  margin-right:15px !important;
+  margin-right: 15px !important;
   a {
     margin-top: 0px;
     float: left;
@@ -452,10 +453,10 @@
 
 .leaflet-control-layers {
   background-color: transparent !important;
-  padding:10px;
-  box-shadow:none !important;
-  margin-top:0px !important;
-  padding-top:0px;
+  padding: 10px;
+  box-shadow: none !important;
+  margin-top: 0px !important;
+  padding-top: 0px;
 
   a {
     background-image: url(/assets/layer_selector.png) !important;
@@ -572,7 +573,7 @@ div.red-marker:after {
     padding-bottom: 0px;
 
     a.title {
-      font-size: 14px;
+      font-size: 16px;
       font-weight: bold;
     }
 
@@ -606,7 +607,7 @@ div.red-marker:after {
         margin-left: 0px;
         margin-right: 5px;
         margin-top: 5px;
-        border: 1px dashed grey;
+        border: 1px solid grey;
       }
     }
   }
